--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,41 @@
   font-family: 'Futura PT', sans-serif;
 }
 
+html{
+  scroll-behavior:smooth;
+  overflow: auto;
+}
 
 .App{
   width: 100%;
   height: 100%;
 }
+
+/* Hide the default scroll bar */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Create a custom scroll bar track */
+::-webkit-scrollbar-track {
+  background-color: #a0a0a0;
+}
+
+/* Create a custom scroll bar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 5px;
+}
+
+/* Add hover styles to the scroll bar thumb */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+
+
+
+
 
 
 
