--- a/src/App.css
+++ b/src/App.css
@@ -24,18 +24,18 @@ html{
 
 /* Create a custom scroll bar track */
 ::-webkit-scrollbar-track {
-  background-color: #a0a0a0;
+  background-color: black;
 }
 
 /* Create a custom scroll bar thumb */
 ::-webkit-scrollbar-thumb {
-  background-color: #888;
+  background-color: black;
   border-radius: 5px;
 }
 
 /* Add hover styles to the scroll bar thumb */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
+  background-color: black;
 }
 
 
