--- a/src/App.css
+++ b/src/App.css
@@ -15,33 +15,29 @@ html{
 .App{
   width: 100%;
   height: 100%;
+  min-height: 80vh;
 }
 
-/* Hide the default scroll bar */
+
+
+/* width */
 ::-webkit-scrollbar {
-  display: none;
+  width: 10px;
 }
 
-/* Create a custom scroll bar track */
+/* Track */
 ::-webkit-scrollbar-track {
-  background-color: black;
+  background: #f1f1f1;
 }
 
-/* Create a custom scroll bar thumb */
+/* Handle */
 ::-webkit-scrollbar-thumb {
-  background-color: black;
-  border-radius: 5px;
+  background: #888;
 }
 
-/* Add hover styles to the scroll bar thumb */
+/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: black;
+  background: #555;
 }
-
-
-
-
-
-
 
 
