--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -29,10 +29,25 @@ header ul li {
 }
 
 header ul li:hover {
-    color: black
+    color: black;
+    cursor: pointer;
 }
 
 header a{
     text-decoration: none;
     color: black;
+}
+
+.subMenu {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    text-align: letf;
+    height: auto;
+    width: 200px;
+    background-color: rgba(255, 255, 255, 0.816);
+    border-radius: 10px;
+}
+.subMenu li {
+    font-size: 17px;
 }
