--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,9 +6,14 @@ header {
 
 header h1 {
     padding-top: 30px;
-    padding-bottom: 30px;
     text-align: center;
+    
+}
 
+header h5 {
+    text-align: center;
+    padding-bottom: 30px;
+    color: rgba(0, 0, 0, 0.316);
 }
 
 
