--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -52,6 +52,7 @@ header a{
     width: 200px;
     background-color: rgba(255, 255, 255, 0.816);
     border-radius: 10px;
+    z-index: 1000;
 }
 .subMenu li {
     font-size: 17px;
