--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -44,7 +44,7 @@ header a{
 }
 
 .subMenu {
-    position: fixed;
+    position: absolute;
     display: flex;
     flex-direction: column;
     text-align: letf;
