--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -13,7 +13,7 @@
     width: 50%;
 }
 
-.about img {
+.aboutImage {
     width: auto;
     height: auto;  
     max-height: 80vh;
@@ -22,7 +22,13 @@
 
 .text {
     width: 50%;
+    padding-right: 2%;
     padding-left: 2%;
+}
+
+.unalome {
+    width: 50px;
+    height: auto;
 }
 
 @media (max-width: 880px) {
