--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 60px;
+    padding: 50px;
     width: 100%;
 }
 
@@ -39,5 +39,10 @@
   
 }
 
+@media (max-width: 768px) {
+  #gallery {
+    padding: 0;
+  }
+}
 
 
